Overflow fix attempt #5
Please please please please

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ button,
   grid-template-columns: auto;
   grid-template-rows: auto;
   grid-template-areas: "addC numC subC";
-  grid-auto-rows: 1fr;
   grid-column-gap: 10px;
 }
 
